// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom validation - check errorPath - level 1 1`] = `
{
  "errorMessage": "Custom validation failed",
  "errorPath": [
    "name",
  ],
  "isValid": false,
  "properties": {
    "address": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
      "properties": {
        "line1": {
          "errorMessage": "",
          "errorPath": [],
          "isValid": true,
        },
      },
    },
    "name": {
      "errorMessage": "Custom validation failed",
      "errorPath": [],
      "isValid": false,
    },
  },
}
`;

exports[`Custom validation - check errorPath - level 2 1`] = `
{
  "errorMessage": "Custom validation failed",
  "errorPath": [
    "address",
    "line1",
  ],
  "isValid": false,
  "properties": {
    "address": {
      "errorMessage": "Custom validation failed",
      "errorPath": [
        "line1",
      ],
      "isValid": false,
      "properties": {
        "line1": {
          "errorMessage": "Custom validation failed",
          "errorPath": [],
          "isValid": false,
        },
      },
    },
    "name": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  },
}
`;

exports[`Password equality validation 1`] = `
{
  "errorMessage": "Passwords do not match",
  "errorPath": [
    "repeatPassword",
  ],
  "isValid": false,
  "properties": {
    "password": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
    "repeatPassword": {
      "errorMessage": "Passwords do not match",
      "errorPath": [],
      "isValid": false,
    },
    "username": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  },
}
`;
